--- a/src/racadauto/Modificar_item.form
+++ b/src/racadauto/Modificar_item.form
@@ -28,7 +28,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="jLabel9" min="-2" pref="426" max="-2" attributes="0"/>
                   <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
-                      <Group type="102" attributes="0">
+                      <Group type="102" alignment="0" attributes="0">
                           <Group type="103" groupAlignment="1" attributes="0">
                               <Group type="102" alignment="0" attributes="0">
                                   <Component id="JB_OK" min="-2" pref="74" max="-2" attributes="0"/>
@@ -78,10 +78,10 @@
                           <EmptySpace max="32767" attributes="0"/>
                           <Component id="JB_cancel" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <Component id="jScrollPane1" min="-2" pref="633" max="-2" attributes="0"/>
+                      <Component id="jScrollPane1" alignment="0" min="-2" pref="570" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace pref="234" max="32767" attributes="0"/>
+              <EmptySpace pref="49" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -117,7 +117,7 @@
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="JB_OK" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="JB_cancel" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="JB_cancel" alignment="1" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Component id="LBL_estado" max="32767" attributes="0"/>
               </Group>
