agregado mantenedores de familia y unidad de medida

--- a/src/racadauto/Modificar_item.form
+++ b/src/racadauto/Modificar_item.form
@@ -115,9 +115,9 @@
               </Group>
               <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="JB_OK" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="JB_cancel" alignment="1" min="-2" max="-2" attributes="0"/>
+                      <Component id="JB_OK" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Component id="LBL_estado" max="32767" attributes="0"/>
               </Group>
